--- a/src/components/atoms/Header/Header.module.scss
+++ b/src/components/atoms/Header/Header.module.scss
@@ -3,5 +3,6 @@
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 5.62%);
   display: flex;
   align-items: center;
+  background-color: #fff;
   padding: 0 80px;
 }
