--- a/src/templates/Layout.module.scss
+++ b/src/templates/Layout.module.scss
@@ -1,3 +1,13 @@
+@import "../assets/styles/variables.scss";
+
 .contentWrapper {
   padding: 0 80px;
+
+  @include for-tablet {
+    padding: 0 40px;
+  }
+
+  @include for-mobile {
+    padding: 0 20px;
+  }
 }
