--- a/src/components/atoms/Header/Header.module.scss
+++ b/src/components/atoms/Header/Header.module.scss
@@ -1,8 +1,10 @@
+@import "../../../assets/styles/variables.scss";
+
 .header {
   height: 80px;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 5.62%);
   display: flex;
   align-items: center;
-  background-color: #fff;
+  background-color: $color-white;
   padding: 0 80px;
 }
