--- a/src/components/molecules/CountryCard/CountryCard.module.scss
+++ b/src/components/molecules/CountryCard/CountryCard.module.scss
@@ -1,11 +1,13 @@
+@import "../../../assets/styles/variables.scss";
+
 .cardWrapper {
   display: flex;
   flex-direction: column;
   height: 336px;
   width: 264px;
   box-shadow: 0px 0px 7px 2px rgba(0, 0, 0, 2.94%);
-  background-color: #fff;
-  border-radius: 5px;
+  background-color: $color-white;
+  border-radius: $border-rounded;
   overflow: hidden;
 }
 
@@ -28,5 +30,5 @@
 .countryDetails {
   display: flex;
   flex-direction: column;
-  gap: 8px;
+  gap: $spacing-default;
 }
