--- a/src/components/atoms/BorderCountry/BorderCountry.module.scss
+++ b/src/components/atoms/BorderCountry/BorderCountry.module.scss
@@ -1,3 +1,5 @@
+@import "../../../assets/styles/variables.scss";
+
 .link {
   width: 96px;
   height: 28px;
@@ -6,6 +8,8 @@
   justify-content: center;
   text-decoration: none;
   color: inherit;
-  box-shadow: 0px 0px 4px 1px rgba(0, 0, 0, 10.49%);
+  box-shadow: $box-shadow-default;
+  border-radius: $border-radius-default;
   border-radius: 2px;
+  background-color: $color-white;
 }
