--- a/src/components/atoms/Header/Header.module.scss
+++ b/src/components/atoms/Header/Header.module.scss
@@ -1,10 +1,24 @@
 @import "../../../assets/styles/variables.scss";
+@import "../../../assets/styles/media.scss";
 
 .header {
   height: 80px;
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 5.62%);
+  box-shadow: $box-shadow-default;
   display: flex;
   align-items: center;
   background-color: $color-white;
   padding: 0 80px;
+
+  @include for-mobile {
+    padding: 0 16px;
+  }
+}
+
+.title {
+  font-size: 24px;
+  font-weight: 800;
+
+  @include for-mobile {
+    font-size: 18px;
+  }
 }
