--- a/src/components/atoms/RegionSelect/RegionSelect.module.scss
+++ b/src/components/atoms/RegionSelect/RegionSelect.module.scss
@@ -1,4 +1,4 @@
-@import "../../../assets//styles/variables.scss";
+@import "../../../assets/styles/variables.scss";
 
 .selectWrapper {
   position: relative;
@@ -13,8 +13,8 @@
 .select {
   padding: 18px 24px;
   border: none;
-  border-radius: $border-rounded;
+  border-radius: $border-radius-default;
   width: 200px;
   appearance: none;
-  box-shadow: 0px 2px 9px rgba(0, 0, 0, 5.32%);
+  box-shadow: $box-shadow-default;
 }
