--- a/src/components/atoms/SearchInput/SearchInput.module.scss
+++ b/src/components/atoms/SearchInput/SearchInput.module.scss
@@ -14,6 +14,6 @@
   width: 480px;
   padding: 18px 74px;
   border: none;
-  box-shadow: 0px 2px 9px rgba(0, 0, 0, 5.32%);
-  border-radius: $border-rounded;
+  box-shadow: $box-shadow-default;
+  border-radius: $border-radius-default;
 }
