--- a/src/components/molecules/CountryCard/CountryCard.module.scss
+++ b/src/components/molecules/CountryCard/CountryCard.module.scss
@@ -5,9 +5,9 @@
   flex-direction: column;
   height: 336px;
   width: 264px;
-  box-shadow: 0px 0px 7px 2px rgba(0, 0, 0, 2.94%);
+  box-shadow: $box-shadow-default;
   background-color: $color-white;
-  border-radius: $border-rounded;
+  border-radius: $border-radius-default;
   overflow: hidden;
 }
 
