--- a/src/components/molecules/CountryDetails/CountryDetails.module.scss
+++ b/src/components/molecules/CountryDetails/CountryDetails.module.scss
@@ -26,7 +26,7 @@
 .flag {
   height: 400px;
   width: 560px;
-  border-radius: $border-rounded;
+  border-radius: $border-radius-default;
   object-fit: cover;
 }
 
