--- a/src/pages/Country/Country.module.scss
+++ b/src/pages/Country/Country.module.scss
@@ -1,8 +1,28 @@
+@import "../../assets/styles/variables.scss";
+
 .pageWrapper {
   display: flex;
   flex-direction: column;
-  padding-top: 80px;
+  padding: 80px 0px;
   gap: 80px;
+}
+
+.link {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none;
+  color: inherit;
+  padding: 10px;
+  width: 136px;
+  border-radius: $border-radius-default;
+  box-shadow: $box-shadow-default;
+  background-color: $color-white;
+}
+
+.linkText {
+  font-size: 16px;
 }
 
 .pageHeader {
