--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -1,3 +1,5 @@
+@import "../../assets/styles/media.scss";
+
 .homeWrapper {
   padding: 48px 0;
   display: flex;
@@ -11,4 +13,8 @@
   align-items: center;
   flex-wrap: wrap;
   gap: 40px;
+
+  @include for-tablet {
+    justify-content: center;
+  }
 }
